--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,9 +55,10 @@
     "pnpm-autocompletion-zsh": "pnpm completion zsh > ~/completion-for-pnpm.zsh && echo 'source ~/completion-for-pnpm.zsh' >> ~/.zshrc"
   },
   "postStartCommand": {
-    "delete-my-uid-in-dot-env": "sed -i '/^MY_UID=[0-9]\\+/d' ./docker/.env",
-    "delete-my-gid-in-dot-env": "sed -i '/^MY_GID=[0-9]\\+/d' ./docker/.env",
     "adding-api-ip-in-etc-hosts": "grep overbookd /etc/hosts || echo \"$(docker inspect overbookd_api | jq '  .[] | .NetworkSettings | .Networks | .\"overbookd_overbookd_net-api\" | .IPAddress ' | sed -z 's/\"//g') overbookd.traefik.me\" | sudo tee -a /etc/hosts"
+  },
+  "postAttachCommand": {
+    "delete-my-uid-and-gid-in-dot-env": "sed -i '/^MY_\\(U\\|G\\)ID=[0-9]\\+/d' ./docker/.env"
   }
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
