--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@nuxtjs/leaflet": "1.2.4",
+    "@overbookd/access-manager": "workspace:*",
     "@overbookd/alerts": "workspace:*",
     "@overbookd/assignment": "workspace:*",
     "@overbookd/charisma": "workspace:*",
