--- a/domains/access-manager/package.json
+++ b/domains/access-manager/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@overbookd/event": "workspace:*",
     "@overbookd/list": "workspace:*",
-    "@overbookd/permission": "workspace:*"
+    "@overbookd/permission": "workspace:*",
+    "@overbookd/team-constants": "workspace:*"
   }
 }
