--- a/.gitlab/ci/setup-pnpm.gitlab-ci.yml
+++ b/.gitlab/ci/setup-pnpm.gitlab-ci.yml
@@ -2,6 +2,7 @@
   image: node:22.12.0-alpine
   interruptible: true
   before_script:
+    - apk add --no-cache openssl
     - npm install -g pnpm@9.15.0
     - pnpm config set store-dir .pnpm-store
     - pnpm --version
