--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,4 +7,5 @@ RUN chmod +x /etc/profile.d/aliases.sh
 RUN npm install -g pnpm@9.15.0
 
 RUN apk update && apk add --no-cache \
-  jq
+  jq \
+  openssl
