--- a/.gitlab/ci/docker-scan.gitlab-ci.yml
+++ b/.gitlab/ci/docker-scan.gitlab-ci.yml
@@ -27,6 +27,7 @@ overbookd-web_scan:
     APP_PATH: apps/web
     CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}
     CS_DOCKERFILE_PATH: $APP_PATH/Dockerfile
+    GIT_STRATEGY: fetch
   after_script:
     - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375993/tags/${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}"'
 
@@ -49,5 +50,6 @@ overbookd-api_scan:
     APP_PATH: apps/api
     CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}
     CS_DOCKERFILE_PATH: $APP_PATH/Dockerfile
+    GIT_STRATEGY: fetch
   after_script:
     - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375990/tags/${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}"'
