--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,6 +61,7 @@
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
     "@overbookd/web-page": "workspace:*",
+    "@vite-pwa/nuxt": "0.10.6",
     "@vueuse/core": "12.5.0",
     "chart.js": "4.4.7",
     "chartjs-adapter-luxon": "1.3.1",
