--- a/renovate.json
+++ b/renovate.json
@@ -129,9 +129,7 @@
         "^apps/.*/[Dd]ockerfile$",
         "^docker/[Dd]ockerfile$"
       ],
-      "matchStrings": [
-        "\\s*npm install -g (?<depName>.*?)@(?<currentValue>[^\\s]+)"
-      ]
+      "matchStrings": ["\\s* (?<depName>.*?)@(?<currentValue>[^\\s]+)"]
     }
   ]
 }
