--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,11 @@
     "database:migrate": "npx prisma migrate deploy",
     "database:seed": "npx prisma db seed"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
+  },
   "dependencies": {
     "@nestjs-modules/mailer": "2.0.2",
     "@nestjs/common": "11.0.8",
