--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "pnpm": "10.3.0"
   },
   "pnpm": {
-    "neverBuiltDependencies": []
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
