--- a/utils/user/package.json
+++ b/utils/user/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/user",
-  "version": "1.3.15",
+  "version": "1.3.16",
   "description": "Gestion des utilisateurs pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -53,6 +53,7 @@
     "pnpm": "10.6.2"
   },
   "dependencies": {
-    "@overbookd/permission": "workspace:*"
+    "@overbookd/permission": "workspace:*",
+    "@overbookd/registration": "workspace:*"
   }
 }
